--- a/index.html
+++ b/index.html
@@ -1,18 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Xuwei Li</title>
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+    <link rel="stylesheet" href="css/backgroud.css?v=1" />
+    <link rel="stylesheet" href="css/main.css?v=2" />
     <!-- <link rel="icon" href="images/favicon.png" /> -->
-  </head>
+</head>
 
-  <img src="images/avatar.jpg" alt="Xuwei Li" />
+<body>
+    <div id="profile" class="profile">
+        <div class="avatar">
+            <img src="images/avatar.jpg" alt="Xuwei Li" />
+        </div>
+        <div class="social-links">
+            <a class="fab fa-facebook" href="https://facebook.com/xuwei.li.19860214"></a>
+            <a class="fab fa-github" href="https://github.com/XL19860214"></a>
+            <a class="fab fa-instagram" href="https://instagram.com/xuwei__li"></a>
+            <a class="fab fa-linkedin" href="https://www.linkedin.com/in/xuwei-li"></a>
+            <a class="fab fa-twitter" href="https://twitter.com/XL19860214"></a>
+            <a class="fab fa-youtube" href="https://www.youtube.com/channel/UCFZgIsBdV_7_G8tOFrdxL3Q"></a>
+        </div>
+    </div>
+    <div class='wrap'>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+        <div class='tri'></div>
+    </div>
+    <!-- JavaScript -->
+    <script src="js/scripts.js?v=1"></script>
+</body>
 
-  <body>
-    <script src="js/scripts.js"></script>
-  </body>
 </html>
