--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="manifest" href="/manifest.json" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <link rel="stylesheet" href="/css/backgroud.css?v=1" />
-    <link rel="stylesheet" href="/css/main.css?v=3" />
+    <link rel="stylesheet" href="/css/main.css?v=4" />
     <link rel="icon" href="/icons/favicon-16x16.png" sizes="16x16" type="image/png" />
     <link rel="icon" href="/icons/favicon-32x32.png" sizes="32x32" type="image/png" />
     <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" sizes="180x180" type="image/png" />
@@ -35,6 +35,58 @@
             <a class="fab fa-linkedin" href="https://www.linkedin.com/in/xuwei-li"></a>
             <a class="fab fa-twitter" href="https://twitter.com/XL19860214"></a>
             <a class="fab fa-youtube" href="https://www.youtube.com/channel/UCFZgIsBdV_7_G8tOFrdxL3Q"></a>
+        </div>
+        <div id="web">
+            <a class="favicon" href="https://google.com/"><img src="https://google.com/favicon.ico" alt="google.com" /></a>
+            <a class="favicon" href="https://youtube.com/"><img src="https://youtube.com/favicon.ico" alt="youtube.com" /></a>
+            <a class="favicon" href="https://amazon.com/"><img src="https://amazon.com/favicon.ico" alt="amazon.com" /></a>
+            <a class="favicon" href="https://yahoo.com/"><img src="https://yahoo.com/favicon.ico" alt="yahoo.com" /></a>
+            <a class="favicon" href="https://facebook.com/"><img src="https://facebook.com/favicon.ico" alt="facebook.com" /></a>
+            <a class="favicon" href="https://zoom.us/"><img src="https://d24cgw3uvb9a9h.cloudfront.net/zoom.ico" alt="zoom.us" /></a>
+            <a class="favicon" href="https://reddit.com/"><img src="https://reddit.com/favicon.ico" alt="reddit.com" /></a>
+            <a class="favicon" href="https://wikipedia.org/"><img src="https://wikipedia.org/favicon.ico" alt="wikipedia.org" /></a>
+            <a class="favicon" href="https://myshopify.com/"><img src="https://cdn.shopify.com/shopifycloud/shopify/assets/favicon-bdd4952d510d9607e893c45e36bba6b0a8c9c59cb8344e7a75ebe7215112b7f5.png" alt="myshopify.com" /></a>
+            <a class="favicon" href="https://ebay.com/"><img src="https://ebay.com/favicon.ico" alt="ebay.com" /></a>
+            <a class="favicon" href="https://office.com/"><img src="https://blobs.officehome.msocdn.com/images/content/images/favicon-8f211ea639.ico" alt="office.com" /></a>
+            <a class="favicon" href="https://netflix.com/"><img src="https://netflix.com/favicon.ico" alt="netflix.com" /></a>
+            <a class="favicon" href="https://live.com/"><img src="https://logincdn.msauth.net/16.000.28852.5/images/favicon.ico" alt="live.com" /></a>
+            <a class="favicon" href="https://bing.com/"><img src="https://bing.com/favicon.ico" alt="bing.com" /></a>
+            <a class="favicon" href="https://walmart.com/"><img src="https://walmart.com/favicon.ico" alt="walmart.com" /></a>
+            <a class="favicon" href="https://microsoft.com/"><img src="https://microsoft.com/favicon.ico" alt="microsoft.com" /></a>
+            <a class="favicon" href="https://etsy.com/"><img src="https://etsy.com/favicon.ico" alt="etsy.com" /></a>
+            <a class="favicon" href="https://twitch.tv/"><img src="https://twitch.tv/favicon.ico" alt="twitch.tv" /></a>
+            <a class="favicon" href="https://instructure.com/"><img src="https://instructure.com/themes/instructure_blog/images/favicon.ico" alt="instructure.com" /></a>
+            <a class="favicon" href="https://apple.com/"><img src="https://apple.com/favicon.ico" alt="apple.com" /></a>
+            <a class="favicon" href="https://chaturbate.com/"><img src="https://chaturbate.com/favicon.ico" alt="chaturbate.com" /></a>
+            <a class="favicon" href="https://instagram.com/"><img src="https://instagram.com/favicon.ico" alt="instagram.com" /></a>
+            <a class="favicon" href="https://chase.com/"><img src="https://chase.com/favicon.ico" alt="chase.com" /></a>
+            <a class="favicon" href="https://espn.com/"><img src="https://espn.com/favicon.ico" alt="espn.com" /></a>
+            <a class="favicon" href="https://cnn.com/"><img src="https://cnn.com/favicon.ico" alt="cnn.com" /></a>
+            <!-- <a class="favicon" href="https://microsoftonline.com/"><img src="https://microsoftonline.com/favicon.ico" alt="microsoftonline.com" /></a> -->
+            <a class="favicon" href="https://bestbuy.com/"><img src="https://bestbuy.com/favicon.ico" alt="bestbuy.com" /></a>
+            <a class="favicon" href="https://salesforce.com/"><img src="https://www.salesforce.com/favicon.ico" alt="salesforce.com" /></a>
+            <a class="favicon" href="https://nytimes.com/"><img src="https://nytimes.com/favicon.ico" alt="nytimes.com" style="background-color: white;" /></a>
+            <a class="favicon" href="https://zillow.com/"><img src="https://zillow.com/favicon.ico" alt="zillow.com" /></a>
+            <a class="favicon" href="https://adobe.com/"><img src="https://adobe.com/favicon.ico" alt="adobe.com" /></a>
+            <a class="favicon" href="https://linkedin.com/"><img src="https://linkedin.com/favicon.ico" alt="linkedin.com" /></a>
+            <a class="favicon" href="https://target.com/"><img src="https://assets.targetimg1.com/static/images/favicon.ico" alt="target.com" /></a>
+            <a class="favicon" href="https://dropbox.com/"><img src="https://cfl.dropboxstatic.com/static/images/favicon-vflUeLeeY.ico" alt="dropbox.com" /></a>
+            <a class="favicon" href="https://twitter.com/"><img src="https://twitter.com/favicon.ico" alt="twitter.com" /></a>
+            <a class="favicon" href="https://okta.com/"><img src="https://okta.com/favicon.ico" alt="okta.com" /></a>
+            <a class="favicon" href="https://usps.com/"><img src="https://usps.com/favicon.ico" alt="usps.com" /></a>
+            <a class="favicon" href="https://aliexpress.com/"><img src="https://aliexpress.com/favicon.ico" alt="aliexpress.com" /></a>
+            <a class="favicon" href="https://craigslist.org/"><img src="https://craigslist.org/favicon.ico" alt="craigslist.org" /></a>
+            <a class="favicon" href="https://tmall.com/"><img src="https://tmall.com/favicon.ico" alt="tmall.com" /></a>
+            <a class="favicon" href="https://force.com/"><img src="https://www.salesforce.com/favicon.ico" alt="force.com" /></a>
+            <a class="favicon" href="https://hulu.com/"><img src="https://hulu.com/favicon.ico" alt="hulu.com" /></a>
+            <a class="favicon" href="https://wellsfargo.com/"><img src="https://wellsfargo.com/favicon.ico" alt="wellsfargo.com" /></a>
+            <a class="favicon" href="https://imdb.com/"><img src="https://imdb.com/favicon.ico" alt="imdb.com" /></a>
+            <!-- <a class="favicon" href="https://homedepot.com/"><img src="https://homedepot.com/favicon.ico" alt="homedepot.com" /></a> -->
+            <a class="favicon" href="https://ups.com/"><img src="https://ups.com/favicon.ico" alt="ups.com" /></a>
+            <a class="favicon" href="https://paypal.com/"><img src="https://paypal.com/favicon.ico" alt="paypal.com" /></a>
+            <a class="favicon" href="https://indeed.com/"><img src="https://indeed.com/images/favicon.ico" alt="indeed.com" /></a>
+            <a class="favicon" href="https://spotify.com/"><img src="https://spotify.com/favicon.ico" alt="spotify.com" style="background-color: white;" /></a>
+            <a class="favicon" href="https://quizlet.com/"><img src="https://quizlet.com/favicon.ico" alt="quizlet.com" /></a>
         </div>
     </div>
     <div class='wrap'>
