[1] Update index.html [1.1] Hide NSFW link until better approach comes out

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <a class="favicon" href="https://twitch.tv/"><img src="https://twitch.tv/favicon.ico" alt="twitch.tv" /></a>
             <a class="favicon" href="https://instructure.com/"><img src="https://instructure.com/themes/instructure_blog/images/favicon.ico" alt="instructure.com" /></a>
             <a class="favicon" href="https://apple.com/"><img src="https://apple.com/favicon.ico" alt="apple.com" /></a>
-            <a class="favicon" href="https://chaturbate.com/"><img src="https://chaturbate.com/favicon.ico" alt="chaturbate.com" /></a>
+            <!-- <a class="favicon" href="https://chaturbate.com/"><img src="https://chaturbate.com/favicon.ico" alt="chaturbate.com" /></a> --> <!-- NSFW -->
             <a class="favicon" href="https://instagram.com/"><img src="https://instagram.com/favicon.ico" alt="instagram.com" /></a>
             <a class="favicon" href="https://chase.com/"><img src="https://chase.com/favicon.ico" alt="chase.com" /></a>
             <a class="favicon" href="https://espn.com/"><img src="https://espn.com/favicon.ico" alt="espn.com" /></a>
