--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
         <div class='tri'></div>
     </div>
     <!-- JavaScript -->
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "c4cb366f2cdc47c3be2419a9bd7ffd5f"}'></script><!-- End Cloudflare Web Analytics -->
     <script src="/js/scripts.js?v=1"></script>
 </body>
 
