--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="manifest" href="/manifest.json" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <link rel="stylesheet" href="/css/backgroud.css?v=1" />
-    <link rel="stylesheet" href="/css/main.css?v=8" />
+    <link rel="stylesheet" href="/css/main.css?v=9" />
     <link rel="icon" href="/icons/favicon-16x16.png" sizes="16x16" type="image/png" />
     <link rel="icon" href="/icons/favicon-32x32.png" sizes="32x32" type="image/png" />
     <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" sizes="180x180" type="image/png" />
@@ -24,6 +24,8 @@
 </head>
 
 <body>
+    <iframe id="background" src="/background.html" title="Inline Frame Background"></iframe>
+
     <div id="profile" class="profile">
         <div class="avatar">
             <img src="/images/avatar.jpg" alt="Xuwei Li" />
@@ -104,208 +106,6 @@
             <a class="favicon" href="https://uscis.gov/"><img src="https://uscis.gov/favicon.ico" alt="uscis.gov" /></a>
             <a class="favicon" href="https://whitehouse.gov/"><img src="https://whitehouse.gov/favicon.ico" alt="whitehouse.gov" /></a>
         </div>
-    </div>
-    <div class='wrap'>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
-        <div class='tri'></div>
     </div>
     <!-- Load Facebook SDK for JavaScript -->
     <div id="fb-root"></div>
