[1/2] Update index.html [1.1] Fix hulu.com favicon [1.2] Add #edu block and universities links [1.3] Move to /css/main.css?v=11 [2] Update css/main.css [2.1] Update responsive width, height

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="manifest" href="/manifest.json" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <link rel="stylesheet" href="/css/backgroud.css?v=1" />
-    <link rel="stylesheet" href="/css/main.css?v=10" />
+    <link rel="stylesheet" href="/css/main.css?v=11" />
     <link rel="icon" href="/icons/favicon-16x16.png" sizes="16x16" type="image/png" />
     <link rel="icon" href="/icons/favicon-32x32.png" sizes="32x32" type="image/png" />
     <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" sizes="180x180" type="image/png" />
@@ -80,7 +80,8 @@
             <a class="favicon" href="https://craigslist.org/"><img src="https://craigslist.org/favicon.ico" alt="craigslist.org" /></a>
             <a class="favicon" href="https://tmall.com/"><img src="https://tmall.com/favicon.ico" alt="tmall.com" /></a>
             <a class="favicon" href="https://force.com/"><img src="https://www.salesforce.com/favicon.ico" alt="force.com" /></a>
-            <a class="favicon" href="https://hulu.com/"><img src="https://hulu.com/favicon.ico" alt="hulu.com" /></a>
+            <!-- <a class="favicon" href="https://hulu.com/"><img src="https://hulu.com/favicon.ico" alt="hulu.com" /></a> --> <!-- Become http which is insecure -->
+            <a class="favicon" href="https://hulu.com/"><img src="https://www.hulu.com/static/favicon.ico.png" alt="hulu.com" /></a>
             <a class="favicon" href="https://wellsfargo.com/"><img src="https://wellsfargo.com/favicon.ico" alt="wellsfargo.com" /></a>
             <a class="favicon" href="https://imdb.com/"><img src="https://imdb.com/favicon.ico" alt="imdb.com" /></a>
             <!-- <a class="favicon" href="https://homedepot.com/"><img src="https://homedepot.com/favicon.ico" alt="homedepot.com" /></a> -->
@@ -105,6 +106,11 @@
             <a class="favicon" href="https://usa.gov/"><img src="https://usa.gov/images/favicon.ico" alt="usa.gov" /></a>
             <a class="favicon" href="https://uscis.gov/"><img src="https://uscis.gov/favicon.ico" alt="uscis.gov" /></a>
             <a class="favicon" href="https://whitehouse.gov/"><img src="https://whitehouse.gov/favicon.ico" alt="whitehouse.gov" /></a>
+        </div>
+        <div id="edu">
+            <a class="favicon" href="https://harvard.edu/"><img src="https://www.harvard.edu/sites/all/themes/hedu2015/assets/img/favicon.ico" alt="harvard.edu" /></a>
+            <a class="favicon" href="https://mit.edu/"><img src="https://mit.edu/favicon.ico" alt="mit.edu" /></a>
+            <a class="favicon" href="https://stanford.edu/"><img src="https://stanford.edu/favicon.ico" alt="stanford.edu" /></a>
         </div>
     </div>
     <!-- Load Facebook SDK for JavaScript -->
