--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
             <a class="favicon" href="https://usps.com/"><img src="https://usps.com/favicon.ico" alt="usps.com" /></a>
             <a class="favicon" href="https://aliexpress.com/"><img src="https://aliexpress.com/favicon.ico" alt="aliexpress.com" /></a>
             <a class="favicon" href="https://craigslist.org/"><img src="https://craigslist.org/favicon.ico" alt="craigslist.org" /></a>
-            <a class="favicon" href="https://tmall.com/"><img src="https://tmall.com/favicon.ico" alt="tmall.com" /></a>
+            <!-- <a class="favicon" href="https://tmall.com/"><img src="https://tmall.com/favicon.ico" alt="tmall.com" /></a> -->
+            <a class="favicon" href="https://tmall.com/"><img src="https://img.alicdn.com/tfs/TB1XlF3RpXXXXc6XXXXXXXXXXXX-16-16.png" alt="tmall.com" />
             <a class="favicon" href="https://force.com/"><img src="https://www.salesforce.com/favicon.ico" alt="force.com" /></a>
             <!-- <a class="favicon" href="https://hulu.com/"><img src="https://hulu.com/favicon.ico" alt="hulu.com" /></a> --> <!-- Become http which is insecure -->
             <a class="favicon" href="https://hulu.com/"><img src="https://www.hulu.com/static/favicon.ico.png" alt="hulu.com" /></a>
@@ -93,8 +94,10 @@
         </div>
         <div id="gov">
             <a class="favicon" href="https://cbp.gov/"><img src="https://cbp.gov/favicon.ico" alt="cbp.gov" /></a>
+            <a class="favicon" href="https://cdc.gov/"><img src="https://cdc.gov/favicon.ico" alt="cdc.gov" /></a>
             <a class="favicon" href="https://coronavirus.gov/"><img src="https://coronavirus.gov/favicon.ico" alt="coronavirus.gov" /></a>
             <a class="favicon" href="https://dhs.gov/"><img src="https://dhs.gov/favicon.ico" alt="dhs.gov" /></a>
+            <a class="favicon" href="https://www.eia.gov/"><img src="https://www.eia.gov/favicon.ico" alt="eia.gov" /></a>
             <!-- <a class="favicon" href="https://www.evus.gov/"><img src="https://www.evus.gov/favicon.ico" alt="evus.gov" /></a> -->
             <a class="favicon" href="https://federalreserve.gov/"><img src="https://federalreserve.gov/favicon.ico" alt="federalreserve.gov" /></a>
             <a class="favicon" href="https://nasa.gov/"><img src="https://nasa.gov/favicon.ico" alt="nasa.gov" /></a>
@@ -140,7 +143,7 @@
     </div>
     <!-- JavaScript -->
     <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "c4cb366f2cdc47c3be2419a9bd7ffd5f"}'></script><!-- End Cloudflare Web Analytics -->
-    <script src="/js/scripts.js?v=1"></script>
+    <script src="/js/scripts.js?v=2"></script>
 </body>
 
 </html>
