[1/8] Rename css/backgroud.css to css/background.css [2] Rename icons/favicon-16x16.png to icons/icon-16x16.png [3] Rename icons/favicon-32x32.png to icons/icon-32x32.png [4] Update background.html [4.1] Change according to renames [5] Update index.html [5.1] Change according to renames [5.2] Add market links block [5.3] Move to /css/main.css?v=12 [5.4] Move to /js/scripts?v=3 [6] Update css/main.css [6.1] Extend height after adding market block [7] Update service-worker.js [7.1] Add install event handler [7.2] Add activate event handler [7.3] Refactor clousure format [7.4] Refactor cache naming [8] Update js/scripts.js [8.1] Move to /service-worker.js?v=2

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <link rel="canonical" href="https://xuwei.li/" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
-    <link rel="stylesheet" href="/css/backgroud.css?v=1" />
-    <link rel="stylesheet" href="/css/main.css?v=11" />
-    <link rel="icon" href="/icons/favicon-16x16.png" sizes="16x16" type="image/png" />
-    <link rel="icon" href="/icons/favicon-32x32.png" sizes="32x32" type="image/png" />
+    <link rel="stylesheet" href="/css/main.css?v=12" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="icon" href="/icons/icon-16x16.png" sizes="16x16" type="image/png" />
+    <link rel="icon" href="/icons/icon-32x32.png" sizes="32x32" type="image/png" />
     <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" sizes="180x180" type="image/png" />
     <link rel="icon" href="/icons/icon-192x192.png" sizes="192x192" type="image/png" />
     <link rel="icon" href="/icons/icon-512x512.png" sizes="512x512" type="image/png" />
@@ -92,6 +92,11 @@
             <a class="favicon" href="https://spotify.com/"><img src="https://spotify.com/favicon.ico" alt="spotify.com" style="background-color: white;" /></a>
             <a class="favicon" href="https://quizlet.com/"><img src="https://quizlet.com/favicon.ico" alt="quizlet.com" /></a>
         </div>
+        <div id="market">
+            <a class="favicon" href="https://nasdaq.com/"><img src="https://nasdaq.com/favicon.ico" alt="nasdaq.com" /></a>
+            <!-- <a class="favicon" href="https://nyse.com/"><img src="https://nyse.com/favicon.ico" alt="nyse.com" /></a> -->
+            <a class="favicon" href="https://nyse.com/"><img src="https://static.nyse.com/favicons/1.0.0/nyse.ico" alt="nyse.com" /></a>
+        </div>
         <div id="gov">
             <a class="favicon" href="https://cbp.gov/"><img src="https://cbp.gov/favicon.ico" alt="cbp.gov" /></a>
             <a class="favicon" href="https://cdc.gov/"><img src="https://cdc.gov/favicon.ico" alt="cdc.gov" /></a>
@@ -143,7 +148,7 @@
     </div>
     <!-- JavaScript -->
     <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "c4cb366f2cdc47c3be2419a9bd7ffd5f"}'></script><!-- End Cloudflare Web Analytics -->
-    <script src="/js/scripts.js?v=2"></script>
+    <script src="/js/scripts.js?v=3"></script>
 </body>
 
 </html>
