--- a/background.html
+++ b/background.html
@@ -13,9 +13,10 @@
     <title>Xuwei Li</title>
     <link rel="canonical" href="https://xuwei.li/backgroud.html" />
     <link rel="manifest" href="/manifest.json" />
-    <link rel="stylesheet" href="/css/backgroud.css?v=1" />
-    <link rel="icon" href="/icons/favicon-16x16.png" sizes="16x16" type="image/png" />
-    <link rel="icon" href="/icons/favicon-32x32.png" sizes="32x32" type="image/png" />
+    <link rel="stylesheet" href="/css/background.css?v=1" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="icon" href="/icons/icon-16x16.png" sizes="16x16" type="image/png" />
+    <link rel="icon" href="/icons/icon-32x32.png" sizes="32x32" type="image/png" />
     <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" sizes="180x180" type="image/png" />
     <link rel="icon" href="/icons/icon-192x192.png" sizes="192x192" type="image/png" />
     <link rel="icon" href="/icons/icon-512x512.png" sizes="512x512" type="image/png" />
