[1/2] Update index.html [1.1] Change Instragram profile link from xuwei__li to xl19860214 [2] Update service-worker.js

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="social-links">
             <a class="fab fa-facebook" href="https://facebook.com/XL19860214"></a>
             <a class="fab fa-github" href="https://github.com/XL19860214"></a>
-            <a class="fab fa-instagram" href="https://instagram.com/xuwei__li"></a>
+            <a class="fab fa-instagram" href="https://instagram.com/xl19860214"></a>
             <a class="fab fa-linkedin" href="https://www.linkedin.com/in/xuwei-li"></a>
             <a class="fab fa-twitter" href="https://twitter.com/XL19860214"></a>
             <a class="fab fa-youtube" href="https://www.youtube.com/channel/UCFZgIsBdV_7_G8tOFrdxL3Q"></a>
@@ -163,7 +163,7 @@
     <!-- Service Worker -->
     <script>
         if (navigator.serviceWorker) {
-            navigator.serviceWorker.register('/service-worker.js?v=2.2').then(function (registration) {
+            navigator.serviceWorker.register('/service-worker.js?v=2.3').then(function (registration) {
                 // #DEBUG
                 console.log('ServiceWorker registration successful with scope:', registration.scope);
             }).catch(function (error) {
