--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="canonical" href="https://xuwei.li/" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
-    <link rel="stylesheet" href="/css/main.css?v=13" />
+    <link rel="stylesheet" href="/css/main.css?v=14" />
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="icon" href="/icons/icon-16x16.png" sizes="16x16" type="image/png" />
     <link rel="icon" href="/icons/icon-32x32.png" sizes="32x32" type="image/png" />
@@ -57,7 +57,7 @@
             <a class="favicon" href="https://microsoft.com"><img src="https://microsoft.com/favicon.ico" alt="microsoft.com" /></a>
             <a class="favicon" href="https://etsy.com"><img src="https://etsy.com/favicon.ico" alt="etsy.com" /></a>
             <a class="favicon" href="https://twitch.tv"><img src="https://twitch.tv/favicon.ico" alt="twitch.tv" /></a>
-            <a class="favicon" href="https://instructure.com"><img src="https://instructure.com/themes/instructure_blog/images/favicon.ico" alt="instructure.com" /></a>
+            <a class="favicon" href="https://instructure.com"><img src="https://www.instructure.com/themes/custom/themekit/favicon.ico" alt="instructure.com" /></a>
             <a class="favicon" href="https://apple.com"><img src="https://apple.com/favicon.ico" alt="apple.com" /></a>
             <!-- <a class="favicon" href="https://chaturbate.com"><img src="https://chaturbate.com/favicon.ico" alt="chaturbate.com" /></a> --> <!-- NSFW -->
             <a class="favicon" href="https://instagram.com"><img src="https://instagram.com/favicon.ico" alt="instagram.com" /></a>
@@ -131,6 +131,15 @@
             <a class="favicon" href="https://navy.mil"><img src="https://www.navy.mil/Portals/1/favicon.ico" alt="navy.mil" style="background-color: white;" /></a>
             <a class="favicon" href="https://uscg.mil"><img src="https://www.uscg.mil/Portals/0/Images/favicon.ico" alt="uscg.mil" /></a>
         </div>
+        <div id="service">
+            <p>$1.00 USD for each day, I officially recognize subscriber as an existence of this world.</p>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                <input type="hidden" name="cmd" value="_s-xclick">
+                <input type="hidden" name="hosted_button_id" value="M34J3JXJH3LD8">
+                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribeCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+            </form>
+        </div>
     </div>
     <!-- Load Facebook SDK for JavaScript -->
     <div id="fb-root"></div>
@@ -163,7 +172,7 @@
     <!-- Service Worker -->
     <script>
         if (navigator.serviceWorker) {
-            navigator.serviceWorker.register('/service-worker.js?v=2.3').then(function (registration) {
+            navigator.serviceWorker.register('/service-worker.js?v=2.4').then(function (registration) {
                 // #DEBUG
                 console.log('ServiceWorker registration successful with scope:', registration.scope);
             }).catch(function (error) {
